--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Run of Web</title>
+    <title>Web of Run</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Zhandi100.GitHub.io</h1>
-        <h2>Set up website</h2>
+        <h1>Website of Run</h1>
+        <h2>Set up simple website</h2>
 
         <section id="downloads">
           <a href="https://github.com/zhandi100" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
