--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <a id="-welcome-to-github-pages" class="anchor" href="#-welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>A few of tools</h2>
 
 <h3>
-<a id="designer-templates" class="anchor" target="_blank" href="../tool/factor.html" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span>Factor</a>
+<a id="designer-templates" class="anchor" href="./Link/tool/factor.html" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span>Factor</a>
 </h3>
 
 <h3>
